--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Airlines!!</title>
-    <link rel="stylesheet" href="./style.css">
-  </head>
-  <body>
+## Popcorn CSS challenge
+Recreate the site below
+![alt text](https://i.gyazo.com/d515c0431fd1ab46dbd3104623c3f34b.png)
 
-  </body>
+The colors required are in the css file.
+
+Do this via "popcorn programming" in groups.
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Popcorn CSS Challenge</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Popcorn Palace</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Menu</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <div class="container">
+                <h2>Delicious Popcorn Flavors</h2>
+                <p>Try our mouth-watering popcorn flavors, made with the finest ingredients!</p>
+                <button>Order Now</button>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Popcorn Palace</p>
+        </div>
+    </footer>
+</body>
 </html>
